--- a/Excercise-5/index.html
+++ b/Excercise-5/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excercise-5</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="mainComtainer">
+        <div class="container">
+            <h1>Hacker Man</h1>
+            <p id="text"></p>
+        </div>
+        <div class="background"></div>
+    </div>
     <script src="app.js"></script>
-    
+
 </body>
+
 </html>
