--- a/Excercise-6/index.html
+++ b/Excercise-6/index.html
@@ -6,6 +6,20 @@
     <title>Excercise-6</title>
 </head>
 <body>
+    <div class="container">
+        <div class="todo">
+            <div class="input">
+                <input type="text" id="todo-input">
+                <button id="submit">Submit</button>
+            </div>
+            <div class="todo-list">
+                <ul id="list">
+
+                </ul>
+            </div>
+        </div>
+        
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
